<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:duplicateParentState="false"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:src="@mipmap/add_btn" />

            <EditText
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="-70dp"
                android:autofillHints=""
                android:background="@drawable/input_outline"
                android:ems="10"
                android:hint="@string/item_name"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:background="@drawable/input_outline"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="number"
                android:padding="10dp" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="50dp"
                android:autofillHints=""
                android:background="@drawable/input_outline"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="number"
                android:padding="10dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/button"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>